1.12 backport/rewrite
Backported the JAOPCA 3+ framework to 1.12.2
Removed Charcoal Pit support
Removed GregTech Community Edition support
Removed Immersive Engineering support
Removed Sky Compression support
Removed Static Power support
Removed Thermal Expansion support
Made Foundry support only work on Ignition: Foundry
Temporarily removed all OreDictInit support
Moved OreDictInit functionality into the main mod
Added HBM's Nuclear Tech Mod support
Added Railcraft support
Coin, Gear, Plate, Dense Plate, and Stick modules are added as passive